test/pass/module.rnp
import { add } from './module-FIXTURE.rnp';
add(1, 2);
---
1 2 + p
