test/fail/macro-param-redeclare.rnp
macro x($a, $a) {}
x(1, 1);
---
SyntaxError: Cannot shadow or redeclare $a
fail/macro-param-redeclare.rnp:1:13
macro x($a, $a) {}
            ^^
